--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,9 +17,11 @@
     #0071ff33 160deg,
     transparent 360deg
   );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
+  --secondary-glow: linear-gradient(
+          to bottom right,
+          rgba(1, 65, 255, 0),
+          rgba(1, 65, 255, 0),
+          rgba(1, 65, 255, 0.3)
   );
 
   --tile-start-rgb: 239, 245, 249;
